Fixed scrollbar appearance when using Bulma Theme (CDN)
Referenced `css/home.css` in `index.html` and added html key to CSS, hiding the overflow-y

--- a/css/home.css
+++ b/css/home.css
@@ -8,3 +8,7 @@
 #index-center {
     text-align: center;
 }
+
+html {
+    overflow-y: hidden;
+}
